--- a/app/index.html
+++ b/app/index.html
@@ -2,16 +2,21 @@
 <html>
 <head>
   <title>VotingChain Referendum</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <script src="./app.js"></script>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
+  <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
+  <script src="../build/contracts/Election.json" type="text/javascript"></script>
+  <script src="./javascripts/index.js"></script>
+
 </head>
 <body>
   <h1>VotingChain</h1>
   <h2>Sample Referendum: Should Theresa May remain Prime Minister?</h2>
   <br>
   <h1>Please make your choice below:</h1>
-  <br><br><button id="yes" onclick="App.voteYes()">Yes</button>
-  <br><br><button id="no" onclick="App.voteNo()">No</button>
+  <br><br><button id="yes", onclick=voteYes()>Yes</button>
+  <br><br><button id="no">No</button>
+  <br><br><p id="msg"></p>
   <br><br>
 </body>
+
 </html>
