(WIP) #voteYes and #voteNo now include #updateTally

--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,10 @@
   <br>
   <h1>Please make your choice below:</h1>
   <br><br><button id="yes", onclick=voteYes()>Yes</button>
-  <br><br><button id="no">No</button>
+	<br><br><button id="no", onclick=voteNo()>No</button>
   <br><br><p id="msg"></p>
+	<br><br><p id='0-votes'></p>
+	<br><br><p id='1-votes'></p>
   <br><br>
 </body>
 
