reintroduces guard clauses

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1>VotingChain</h1>
+  <br><br><button id="Register", onclick=registerVoter()>Register</button>
   <h2>Sample Referendum: Should Theresa May remain Prime Minister?</h2>
   <br>
   <h1>Please make your choice below:</h1>
