Adds a Account Number Generator button & assignAccount function to allow multiple test voters to vote

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,9 @@
   <h1>VotingChain</h1>
   <h2>Sample Referendum: Should Theresa May remain Prime Minister?</h2>
   <br>
-  <h1>Please make your choice below:</h1>
+  <h2>Please click to generate your unique voting account number:<h2>
+  <br><button id="account", onclick=assignAccount()>Account Number</button>
+  <h2>Please make your choice below:</h2>
   <br><br><button id="yes", onclick=voteYes()>Yes</button>
 	<br><br><button id="no", onclick=voteNo()>No</button>
   <br><br><p id="msg"></p>
