Create method to display own vote

--- a/app/results.html
+++ b/app/results.html
@@ -9,9 +9,8 @@
 	<body>
 		<h1> Should Theresa May be a cat?</h1>
 		<body onload='displayResults([0,1])'>
-			<p id='0-votes'></p><br>
-			<p id='1-votes'></p><br>
+			Yes: <p id='0-votes'></p><br>
+			No: <p id='1-votes'></p><br>
 		</body>
 	</body>
 </html>
-
