created #displayOwnVote() in index.js - prints last vote cast by user - prints candidate ID, not name

--- a/app/results.html
+++ b/app/results.html
@@ -11,6 +11,7 @@
 		<body onload='displayResults([0,1])'>
 			Yes: <p id='0-votes'></p><br>
 			No: <p id='1-votes'></p><br>
+			You voted: <p id='own-vote'></p>
 		</body>
 	</body>
 </html>
