--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
   <br><br><button>Yes</button>
 	<br><br><button>No</button>
   <br><br>
-  <h2>Shoul we ban the Welsh from using consonants?</h2>
+  <h2>Should we ban the Welsh from using consonants?</h2>
   <br><br><button>Yes</button>
 	<br><br><button>No</button>
   <br><br>
