--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MetaCoin - Truffle Webpack Demo w/ Frontend</title>
+  <title>Deblocracy</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <script src="./app.js"></script>
+  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
 </head>
-<body>
-  <h1>MetaCoin</h1>
-  <h2>Example Truffle Dapp</h2>
-  <h3>You have <span class="black"><span id="balance"></span> META</span></h3>
-
-  <br>
-  <h1>Send MetaCoin</h1>
-  <br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95"></input>
-  <br><label for="receiver">To Address:</label><input type="text" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
-  <br><br><button id="send" onclick="App.sendCoin()">Send MetaCoin</button>
-  <br><br>
-  <span id="status"></span>
-  <br>
-  <span class="hint"><strong>Hint:</strong> open the browser developer console to view any errors and warnings.</span>
+<body class="container">
+  <h1>Register To Vote</h1>
+  <p><h2>Enter your unique account number</h2>
+  <form onsubmit="return false;">
+    <input id='account-number', type='text', name='account'>
+    <input type='submit', name='submit', onclick="validate()">
+  </form>
+  <br><br><p id="validatedaccountnumber"></p>
+  <hr>
+  <h1>Should Theresa May be replaced by a cat?</h1>
+  <a href="#" onclick="voteForCandidate(0)" class="btn btn-primary">Yes</a>
+  <a href="#" onclick="voteForCandidate(1)" class="btn btn-primary">No</a>
+  <p>
+  <div id="address"></div>
+  <div class="table-responsive">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Option</th>
+          <th>Votes</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Yes</td>
+          <td id="candidate-1"></td>
+        </tr>
+        <tr>
+          <td>No</td>
+          <td id="candidate-2"></td>
+        </tr>
+      </tbody>
+    </table>
+    <div id="msg"></div>
+  </div>
+  <hr>
+  <p><h1>Your Vote</h1><p>
+  <a href="#" onclick="displayVote()" class="btn btn-primary">Verify</a>
+  <br><br>Your unique transaction ID: <div id="transaction-id"></div>
+  <br>You voted for: <div id="current-account-vote"></div>
 </body>
+<script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+<script src="app.js"></script>
 </html>
