--- a/app/index.html
+++ b/app/index.html
@@ -43,8 +43,8 @@
   <hr>
   <p><h1>Your Vote</h1><p>
   <a href="#" onclick="displayVote()" class="btn btn-primary">Verify</a>
-  <br><br>Your unique transaction ID: <div id="transaction-id"></div>
-  <br>You voted for: <div id="current-account-vote"></div>
+  <br><br><div id="transaction-id"></div>
+  <br><div id="current-account-vote"></div>
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
