--- a/app/index.html
+++ b/app/index.html
@@ -23,17 +23,19 @@
   </div>
 </nav>
 
-  <div class='videoContainer' style="position: initial; z-index: -99; width: 100%; height: 100%; top: 0px;">
+  <div class='videoContainer' style="position: initial; z-index: -99; width: 100%; height: 100%; top: 0px; background-color:#68666b">
   <iframe frameborder="0" height="100%" width="100%"
     src="https://www.youtube.com/embed/PzVA6gYtPc0?controls=0&autoplay=1&start=180&rel=0&modestbranding=0&disablekb=1"
     style =  "width: 100vw; height: 56.25vw;"  >
   </iframe>
   </div>
 
-  <div class = "container">
+  <div style='align: center' >
 
   <div id='RegisterAnchor'></div>
-  <div id='Register'style="margin-top:75px; height:100vh">
+  <div id='Register'style="padding-top:75px; height:100vh; background-color: #68666b;">
+    <div class = "container" color = "white">
+
     <h1>Register To Vote</h1>
     <p><h2>Enter your unique account number</h2>
     <form onsubmit="return false;">
@@ -41,11 +43,12 @@
     <input type='submit', name='submit', onclick="validate()">
     </form>
     <br><br><p id="validatedaccountnumber"></p>
-    <hr>
+    </div>
   </div>
 
   <div id="VoteAnchor" ></div>
-    <div id='Vote' style="margin-top:75px; height:100vh">
+    <div id='Vote' style="padding-top:75px; height:100vh; background-color: IndianRed">
+        <div class = "container">
     <h1 >Should Theresa May be replaced by a cat?</h1>
     <a href="#" onclick="voteForCandidate(0)" class="btn btn-primary">Yes</a>
     <a href="#" onclick="voteForCandidate(1)" class="btn btn-primary">No</a>
@@ -73,13 +76,15 @@
       <div id="msg"></div>
     </div>
   </div>
-  <hr>
+  </div>
   <div id="ResultsAnchor"></div>
-  <div id='Results' style="margin-top:75px; height:100vh">
+  <div id='Results' style="padding-top:75px; height:100vh; background-color: DodgerBlue">
+    <div class = "container">
     <p><h1>Your Vote</h1><p>
     <a href="#" onclick="displayVote()" class="btn btn-primary">Verify</a>
     <br><br>Your unique transaction ID: <div id="transaction-id"></div>
     <br>You voted for: <div id="current-account-vote"></div>
+  </div>
   </div>
 </div>
 
