Implement User Log out - Once user logs out, no information can be viewed

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,8 @@
   <a href="#" onclick="displayVote()" class="btn btn-primary">Verify</a>
   <br><br><div id="transaction-id"></div>
   <br><div id="current-account-vote"></div>
+
+  <a href="#" onclick="logout()" class="btn btn-primary">Log Out</a>
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
