continuing in our efforts to fancify our page after realising that the css file wasnt linked - things went smooter from this point

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
   <div id="VoteAnchor" ></div>
     <div id='Vote' style="padding-top:75px; height:100vh; background-color: IndianRed">
         <div class = "container">
-    <h1 >Should Theresa May be replaced by a cat?</h1>
+    <h1 >Should Theresa May be replaced by a crocodile?</h1>
     <a href="#" onclick="voteForCandidate(0)" class="btn btn-primary">Yes</a>
     <a href="#" onclick="voteForCandidate(1)" class="btn btn-primary">No</a>
     <p>
