Restrict results to when voter has voted and is registered

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
   <p>
   <div id="address"></div>
   <div class="table-responsive">
-    <table class="table table-bordered">
+    <table id="results-table" class="table table-bordered">
       <thead>
         <tr>
           <th>Option</th>
