Adds in a first pie chart but not currently appearing correctly

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
   <a href="#" onclick="displayVote()" class="btn btn-primary">Verify</a>
   <br><br><div id="transaction-id"></div>
   <br><div id="current-account-vote"></div>
+  <br><div><canvas id="myChart"> </canvas></div>
 
   <a href="#" onclick="logout()" class="btn btn-primary">Log Out</a>
 </body>
